Change Background and Added Image and Centered text and image

--- a/Biography.html
+++ b/Biography.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
  <html>
     <head>
+        <link href="style.css" type="text/css" rel="stylesheet"/>
         <title> Student Bio
         </title>
     </head>
     <body>
         <div>
-            <h1>Hello</h1>
+            <h1><center>Hello!</center></h1>
         </div>
         <div>
-            <h2>Chido Munyanyi</h2>
+            <h2><center>It's Chido</center></h2>
+        </div>
+        <div>
+            <center><img 
+            src="EC320E80-F3F9-407D-9C27-0B04892DCEEF_1_105_c.jpeg"
+            /></center>
         </div>
         <div>
             
@@ -17,9 +23,9 @@
             <h2>Contact Info</h2>
         </div>
         <ul>
-            <li>Email: available on request</li>
-            <li>Github: https://github.com/ChidoMunyanyi</li>
-            <li>Portofolio: coming soon</li>
+            <li><b>Email:</b> available on request</li>
+            <li><b>Github:</b> https://github.com/ChidoMunyanyi</li>
+            <li><b>Portofolio:</b> coming soon</li>
         </ul>
     </body>
     </html>
